charts/corteza-all-in-one/tests/smoke/with-ingress/deployment/03-step.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
unitTest: false
commands:
- command: >
    echo "$CLUSTER_IP chart-example.local" >> /etc/hosts
