charts/corteza-all-in-one/tests/smoke/with-ingress/deployment/99-cleanup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- command: helm uninstall corteza -n corteza-test
