charts/corteza-all-in-one/tests/smoke/with-ingress/deployment/01-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corteza-nginx-ingress-controller-default-backend
  namespace: corteza-test
status:
  availableReplicas: 1
